--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="#" onclick="returnToHome()">
                 <img src="logo.png" alt="Médecins d'Afrique Logo" class="logo">
             </a>
-            <h1 class="title">Questionnaire sur les Cancers Féminins</h1>
+            <h1>Questionnaire sur les Cancers Féminins</h1>
         </header>
         <main>
             <form id="questionnaire-form">
