--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <div id="consent-page" class="question-page page" style="display:none;">
                     <h2>Notice de Consentement</h2>
                     <p>Etes-vous d’accord avec ce que je viens de dire et vous êtes d’accord pour participer à l’étude ?</p>
-                    <button type="button" onclick="nextQuestion()">Oui</button>
+                    <button type="button" onclick="skipTo('knowledge-page-7')">Oui</button>
+                    <!-- <button type="button" onclick="nextQuestion()">Oui</button> -->
                 </div>
 
                 <div id="information-page" class="question-page page" style="display:none;">
